Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25715

Building failure on MacOS 11.3.1 with Connect engine

Details

    Description

      10.2 b9a2e4609f93f2cab253f0

      CONNECT engine:
      /git/10.2/storage/connect/jsonudf.cpp:5946:19: error: address of array 'g->Message' will always evaluate to 'true' [-Werror,-Wpointer-bool-conversion]
                      PUSH_WARNING(g->Message ? g->Message : "Unexpected error");
                                   ~~~^~~~~~~ ~
      /git/10.2/storage/connect/jsonudf.cpp:24:86: note: expanded from macro 'PUSH_WARNING'
      #define PUSH_WARNING(M) push_warning(current_thd, Sql_condition::WARN_LEVEL_WARN, 0, M)
                                                                                           ^
      /git/10.2/storage/connect/jsonudf.cpp:6074:10: error: address of array 'g->Message' will always evaluate to 'true' [-Werror,-Wpointer-bool-conversion]
                      if (g->Message)
                      ~~  ~~~^~~~~~~
      /git/10.2/storage/connect/jsonudf.cpp:6010:7: error: variable 'fout' is used uninitialized whenever 'if' condition is true [-Werror,-Wsometimes-uninitialized]
                      if (!(fin = global_fopen(g, msgid, fn, "rt")))
                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /git/10.2/storage/connect/jsonudf.cpp:6068:7: note: uninitialized use occurs here
                      if (fout) fclose(fout);
                          ^~~~
      /git/10.2/storage/connect/jsonudf.cpp:6010:3: note: remove the 'if' if its condition is always false
                      if (!(fin = global_fopen(g, msgid, fn, "rt")))
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /git/10.2/storage/connect/jsonudf.cpp:6007:13: note: initialize the variable 'fout' to silence this warning
                      FILE *fout;
                                ^
                                 = NULL
      3 errors generated.
      make[2]: *** [storage/connect/CMakeFiles/connect.dir/jsonudf.cpp.o] Error 1
      make[1]: *** [storage/connect/CMakeFiles/connect.dir/all] Error 2
      

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.