- Fix MDEV-25715     modified:   storage/connect/bsonudf.cpp     modified:   storage/connect/jsonudf.cpp